util/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statements
Rule 2     start -> empty
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     empty -> <empty>
Rule 6     statement -> ID EQUALS expr
Rule 7     statement -> ID EQUALS ID
Rule 8     statement -> PRINT LPARENTHESIS expr RPARENTHESIS
Rule 9     statement -> expr
Rule 10    expr -> expr DIVIDE expr
Rule 11    expr -> expr MULTIPLY expr
Rule 12    expr -> expr ADD expr
Rule 13    expr -> expr SUBTRACT expr
Rule 14    expr -> expr MODULUS expr
Rule 15    expr -> expr EEQUALS expr
Rule 16    expr -> expr GREATER expr
Rule 17    expr -> expr SMALLER expr
Rule 18    expr -> expr AND expr
Rule 19    expr -> expr OR expr
Rule 20    expr -> expr NOTEQUALS expr
Rule 21    expr -> expr GEQUAL expr
Rule 22    expr -> expr SEQUAL expr
Rule 23    expr -> expr INCREMENT
Rule 24    expr -> expr DECREMENT
Rule 25    expr -> ID
Rule 26    expr -> INT
Rule 27    expr -> FLOAT
Rule 28    expr -> STRING
Rule 29    expr -> CHAR
Rule 30    expr -> BOOL
Rule 31    statement -> ifstatement
Rule 32    statement -> ifstatement elsestatement
Rule 33    ifstatement -> IF expr LCURLY statement RCURLY
Rule 34    elsestatement -> ELSE LCURLY statement RCURLY
Rule 35    expr -> LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

Terminals, with rules where they appear

ADD                  : 12
AND                  : 18
BOOL                 : 30
CHAR                 : 29
DECREMENT            : 24
DIVIDE               : 10
EEQUALS              : 15
ELSE                 : 34
EQUALS               : 6 7
FLOAT                : 27
GEQUAL               : 21
GREATER              : 16
ID                   : 6 7 7 25
IF                   : 33
INCREMENT            : 23
INT                  : 26
LCURLY               : 33 34 35
LOOP                 : 35
LPARENTHESIS         : 8 35
MODULUS              : 14
MULTIPLY             : 11
NOTEQUALS            : 20
OR                   : 19
PRINT                : 8
RCURLY               : 33 34 35
RPARENTHESIS         : 8 35
SEQUAL               : 22
SMALLER              : 17
STRING               : 28
SUBTRACT             : 13
error                : 

Nonterminals, with rules where they appear

elsestatement        : 32
empty                : 2
expr                 : 6 8 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 24 33 35
ifstatement          : 31 32
start                : 0
statement            : 3 4 33 34
statements           : 1 3 35

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statements
    (2) start -> . empty
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) empty -> .
    (6) statement -> . ID EQUALS expr
    (7) statement -> . ID EQUALS ID
    (8) statement -> . PRINT LPARENTHESIS expr RPARENTHESIS
    (9) statement -> . expr
    (31) statement -> . ifstatement
    (32) statement -> . ifstatement elsestatement
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY
    (33) ifstatement -> . IF expr LCURLY statement RCURLY

    $end            reduce using rule 5 (empty -> .)
    ID              shift and go to state 5
    PRINT           shift and go to state 7
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14
    IF              shift and go to state 15

    start                          shift and go to state 1
    statements                     shift and go to state 2
    empty                          shift and go to state 3
    statement                      shift and go to state 4
    expr                           shift and go to state 6
    ifstatement                    shift and go to state 8

state 1

    (0) S' -> start .



state 2

    (1) start -> statements .
    (3) statements -> statements . statement
    (6) statement -> . ID EQUALS expr
    (7) statement -> . ID EQUALS ID
    (8) statement -> . PRINT LPARENTHESIS expr RPARENTHESIS
    (9) statement -> . expr
    (31) statement -> . ifstatement
    (32) statement -> . ifstatement elsestatement
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY
    (33) ifstatement -> . IF expr LCURLY statement RCURLY

    $end            reduce using rule 1 (start -> statements .)
    ID              shift and go to state 5
    PRINT           shift and go to state 7
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14
    IF              shift and go to state 15

    statement                      shift and go to state 16
    expr                           shift and go to state 6
    ifstatement                    shift and go to state 8

state 3

    (2) start -> empty .

    $end            reduce using rule 2 (start -> empty .)


state 4

    (4) statements -> statement .

    ID              reduce using rule 4 (statements -> statement .)
    PRINT           reduce using rule 4 (statements -> statement .)
    INT             reduce using rule 4 (statements -> statement .)
    FLOAT           reduce using rule 4 (statements -> statement .)
    STRING          reduce using rule 4 (statements -> statement .)
    CHAR            reduce using rule 4 (statements -> statement .)
    BOOL            reduce using rule 4 (statements -> statement .)
    LOOP            reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)
    RCURLY          reduce using rule 4 (statements -> statement .)


state 5

    (6) statement -> ID . EQUALS expr
    (7) statement -> ID . EQUALS ID
    (25) expr -> ID .

    EQUALS          shift and go to state 17
    DIVIDE          reduce using rule 25 (expr -> ID .)
    MULTIPLY        reduce using rule 25 (expr -> ID .)
    ADD             reduce using rule 25 (expr -> ID .)
    SUBTRACT        reduce using rule 25 (expr -> ID .)
    MODULUS         reduce using rule 25 (expr -> ID .)
    EEQUALS         reduce using rule 25 (expr -> ID .)
    GREATER         reduce using rule 25 (expr -> ID .)
    SMALLER         reduce using rule 25 (expr -> ID .)
    AND             reduce using rule 25 (expr -> ID .)
    OR              reduce using rule 25 (expr -> ID .)
    NOTEQUALS       reduce using rule 25 (expr -> ID .)
    GEQUAL          reduce using rule 25 (expr -> ID .)
    SEQUAL          reduce using rule 25 (expr -> ID .)
    INCREMENT       reduce using rule 25 (expr -> ID .)
    DECREMENT       reduce using rule 25 (expr -> ID .)
    ID              reduce using rule 25 (expr -> ID .)
    PRINT           reduce using rule 25 (expr -> ID .)
    INT             reduce using rule 25 (expr -> ID .)
    FLOAT           reduce using rule 25 (expr -> ID .)
    STRING          reduce using rule 25 (expr -> ID .)
    CHAR            reduce using rule 25 (expr -> ID .)
    BOOL            reduce using rule 25 (expr -> ID .)
    LOOP            reduce using rule 25 (expr -> ID .)
    IF              reduce using rule 25 (expr -> ID .)
    $end            reduce using rule 25 (expr -> ID .)
    RCURLY          reduce using rule 25 (expr -> ID .)


state 6

    (9) statement -> expr .
    (10) expr -> expr . DIVIDE expr
    (11) expr -> expr . MULTIPLY expr
    (12) expr -> expr . ADD expr
    (13) expr -> expr . SUBTRACT expr
    (14) expr -> expr . MODULUS expr
    (15) expr -> expr . EEQUALS expr
    (16) expr -> expr . GREATER expr
    (17) expr -> expr . SMALLER expr
    (18) expr -> expr . AND expr
    (19) expr -> expr . OR expr
    (20) expr -> expr . NOTEQUALS expr
    (21) expr -> expr . GEQUAL expr
    (22) expr -> expr . SEQUAL expr
    (23) expr -> expr . INCREMENT
    (24) expr -> expr . DECREMENT

    ID              reduce using rule 9 (statement -> expr .)
    PRINT           reduce using rule 9 (statement -> expr .)
    INT             reduce using rule 9 (statement -> expr .)
    FLOAT           reduce using rule 9 (statement -> expr .)
    STRING          reduce using rule 9 (statement -> expr .)
    CHAR            reduce using rule 9 (statement -> expr .)
    BOOL            reduce using rule 9 (statement -> expr .)
    LOOP            reduce using rule 9 (statement -> expr .)
    IF              reduce using rule 9 (statement -> expr .)
    $end            reduce using rule 9 (statement -> expr .)
    RCURLY          reduce using rule 9 (statement -> expr .)
    DIVIDE          shift and go to state 18
    MULTIPLY        shift and go to state 19
    ADD             shift and go to state 20
    SUBTRACT        shift and go to state 21
    MODULUS         shift and go to state 22
    EEQUALS         shift and go to state 23
    GREATER         shift and go to state 24
    SMALLER         shift and go to state 25
    AND             shift and go to state 26
    OR              shift and go to state 27
    NOTEQUALS       shift and go to state 28
    GEQUAL          shift and go to state 29
    SEQUAL          shift and go to state 30
    INCREMENT       shift and go to state 31
    DECREMENT       shift and go to state 32


state 7

    (8) statement -> PRINT . LPARENTHESIS expr RPARENTHESIS

    LPARENTHESIS    shift and go to state 33


state 8

    (31) statement -> ifstatement .
    (32) statement -> ifstatement . elsestatement
    (34) elsestatement -> . ELSE LCURLY statement RCURLY

    ID              reduce using rule 31 (statement -> ifstatement .)
    PRINT           reduce using rule 31 (statement -> ifstatement .)
    INT             reduce using rule 31 (statement -> ifstatement .)
    FLOAT           reduce using rule 31 (statement -> ifstatement .)
    STRING          reduce using rule 31 (statement -> ifstatement .)
    CHAR            reduce using rule 31 (statement -> ifstatement .)
    BOOL            reduce using rule 31 (statement -> ifstatement .)
    LOOP            reduce using rule 31 (statement -> ifstatement .)
    IF              reduce using rule 31 (statement -> ifstatement .)
    $end            reduce using rule 31 (statement -> ifstatement .)
    RCURLY          reduce using rule 31 (statement -> ifstatement .)
    ELSE            shift and go to state 35

    elsestatement                  shift and go to state 34

state 9

    (26) expr -> INT .

    DIVIDE          reduce using rule 26 (expr -> INT .)
    MULTIPLY        reduce using rule 26 (expr -> INT .)
    ADD             reduce using rule 26 (expr -> INT .)
    SUBTRACT        reduce using rule 26 (expr -> INT .)
    MODULUS         reduce using rule 26 (expr -> INT .)
    EEQUALS         reduce using rule 26 (expr -> INT .)
    GREATER         reduce using rule 26 (expr -> INT .)
    SMALLER         reduce using rule 26 (expr -> INT .)
    AND             reduce using rule 26 (expr -> INT .)
    OR              reduce using rule 26 (expr -> INT .)
    NOTEQUALS       reduce using rule 26 (expr -> INT .)
    GEQUAL          reduce using rule 26 (expr -> INT .)
    SEQUAL          reduce using rule 26 (expr -> INT .)
    INCREMENT       reduce using rule 26 (expr -> INT .)
    DECREMENT       reduce using rule 26 (expr -> INT .)
    ID              reduce using rule 26 (expr -> INT .)
    PRINT           reduce using rule 26 (expr -> INT .)
    INT             reduce using rule 26 (expr -> INT .)
    FLOAT           reduce using rule 26 (expr -> INT .)
    STRING          reduce using rule 26 (expr -> INT .)
    CHAR            reduce using rule 26 (expr -> INT .)
    BOOL            reduce using rule 26 (expr -> INT .)
    LOOP            reduce using rule 26 (expr -> INT .)
    IF              reduce using rule 26 (expr -> INT .)
    $end            reduce using rule 26 (expr -> INT .)
    LCURLY          reduce using rule 26 (expr -> INT .)
    RCURLY          reduce using rule 26 (expr -> INT .)
    RPARENTHESIS    reduce using rule 26 (expr -> INT .)


state 10

    (27) expr -> FLOAT .

    DIVIDE          reduce using rule 27 (expr -> FLOAT .)
    MULTIPLY        reduce using rule 27 (expr -> FLOAT .)
    ADD             reduce using rule 27 (expr -> FLOAT .)
    SUBTRACT        reduce using rule 27 (expr -> FLOAT .)
    MODULUS         reduce using rule 27 (expr -> FLOAT .)
    EEQUALS         reduce using rule 27 (expr -> FLOAT .)
    GREATER         reduce using rule 27 (expr -> FLOAT .)
    SMALLER         reduce using rule 27 (expr -> FLOAT .)
    AND             reduce using rule 27 (expr -> FLOAT .)
    OR              reduce using rule 27 (expr -> FLOAT .)
    NOTEQUALS       reduce using rule 27 (expr -> FLOAT .)
    GEQUAL          reduce using rule 27 (expr -> FLOAT .)
    SEQUAL          reduce using rule 27 (expr -> FLOAT .)
    INCREMENT       reduce using rule 27 (expr -> FLOAT .)
    DECREMENT       reduce using rule 27 (expr -> FLOAT .)
    ID              reduce using rule 27 (expr -> FLOAT .)
    PRINT           reduce using rule 27 (expr -> FLOAT .)
    INT             reduce using rule 27 (expr -> FLOAT .)
    FLOAT           reduce using rule 27 (expr -> FLOAT .)
    STRING          reduce using rule 27 (expr -> FLOAT .)
    CHAR            reduce using rule 27 (expr -> FLOAT .)
    BOOL            reduce using rule 27 (expr -> FLOAT .)
    LOOP            reduce using rule 27 (expr -> FLOAT .)
    IF              reduce using rule 27 (expr -> FLOAT .)
    $end            reduce using rule 27 (expr -> FLOAT .)
    LCURLY          reduce using rule 27 (expr -> FLOAT .)
    RCURLY          reduce using rule 27 (expr -> FLOAT .)
    RPARENTHESIS    reduce using rule 27 (expr -> FLOAT .)


state 11

    (28) expr -> STRING .

    DIVIDE          reduce using rule 28 (expr -> STRING .)
    MULTIPLY        reduce using rule 28 (expr -> STRING .)
    ADD             reduce using rule 28 (expr -> STRING .)
    SUBTRACT        reduce using rule 28 (expr -> STRING .)
    MODULUS         reduce using rule 28 (expr -> STRING .)
    EEQUALS         reduce using rule 28 (expr -> STRING .)
    GREATER         reduce using rule 28 (expr -> STRING .)
    SMALLER         reduce using rule 28 (expr -> STRING .)
    AND             reduce using rule 28 (expr -> STRING .)
    OR              reduce using rule 28 (expr -> STRING .)
    NOTEQUALS       reduce using rule 28 (expr -> STRING .)
    GEQUAL          reduce using rule 28 (expr -> STRING .)
    SEQUAL          reduce using rule 28 (expr -> STRING .)
    INCREMENT       reduce using rule 28 (expr -> STRING .)
    DECREMENT       reduce using rule 28 (expr -> STRING .)
    ID              reduce using rule 28 (expr -> STRING .)
    PRINT           reduce using rule 28 (expr -> STRING .)
    INT             reduce using rule 28 (expr -> STRING .)
    FLOAT           reduce using rule 28 (expr -> STRING .)
    STRING          reduce using rule 28 (expr -> STRING .)
    CHAR            reduce using rule 28 (expr -> STRING .)
    BOOL            reduce using rule 28 (expr -> STRING .)
    LOOP            reduce using rule 28 (expr -> STRING .)
    IF              reduce using rule 28 (expr -> STRING .)
    $end            reduce using rule 28 (expr -> STRING .)
    LCURLY          reduce using rule 28 (expr -> STRING .)
    RCURLY          reduce using rule 28 (expr -> STRING .)
    RPARENTHESIS    reduce using rule 28 (expr -> STRING .)


state 12

    (29) expr -> CHAR .

    DIVIDE          reduce using rule 29 (expr -> CHAR .)
    MULTIPLY        reduce using rule 29 (expr -> CHAR .)
    ADD             reduce using rule 29 (expr -> CHAR .)
    SUBTRACT        reduce using rule 29 (expr -> CHAR .)
    MODULUS         reduce using rule 29 (expr -> CHAR .)
    EEQUALS         reduce using rule 29 (expr -> CHAR .)
    GREATER         reduce using rule 29 (expr -> CHAR .)
    SMALLER         reduce using rule 29 (expr -> CHAR .)
    AND             reduce using rule 29 (expr -> CHAR .)
    OR              reduce using rule 29 (expr -> CHAR .)
    NOTEQUALS       reduce using rule 29 (expr -> CHAR .)
    GEQUAL          reduce using rule 29 (expr -> CHAR .)
    SEQUAL          reduce using rule 29 (expr -> CHAR .)
    INCREMENT       reduce using rule 29 (expr -> CHAR .)
    DECREMENT       reduce using rule 29 (expr -> CHAR .)
    ID              reduce using rule 29 (expr -> CHAR .)
    PRINT           reduce using rule 29 (expr -> CHAR .)
    INT             reduce using rule 29 (expr -> CHAR .)
    FLOAT           reduce using rule 29 (expr -> CHAR .)
    STRING          reduce using rule 29 (expr -> CHAR .)
    CHAR            reduce using rule 29 (expr -> CHAR .)
    BOOL            reduce using rule 29 (expr -> CHAR .)
    LOOP            reduce using rule 29 (expr -> CHAR .)
    IF              reduce using rule 29 (expr -> CHAR .)
    $end            reduce using rule 29 (expr -> CHAR .)
    LCURLY          reduce using rule 29 (expr -> CHAR .)
    RCURLY          reduce using rule 29 (expr -> CHAR .)
    RPARENTHESIS    reduce using rule 29 (expr -> CHAR .)


state 13

    (30) expr -> BOOL .

    DIVIDE          reduce using rule 30 (expr -> BOOL .)
    MULTIPLY        reduce using rule 30 (expr -> BOOL .)
    ADD             reduce using rule 30 (expr -> BOOL .)
    SUBTRACT        reduce using rule 30 (expr -> BOOL .)
    MODULUS         reduce using rule 30 (expr -> BOOL .)
    EEQUALS         reduce using rule 30 (expr -> BOOL .)
    GREATER         reduce using rule 30 (expr -> BOOL .)
    SMALLER         reduce using rule 30 (expr -> BOOL .)
    AND             reduce using rule 30 (expr -> BOOL .)
    OR              reduce using rule 30 (expr -> BOOL .)
    NOTEQUALS       reduce using rule 30 (expr -> BOOL .)
    GEQUAL          reduce using rule 30 (expr -> BOOL .)
    SEQUAL          reduce using rule 30 (expr -> BOOL .)
    INCREMENT       reduce using rule 30 (expr -> BOOL .)
    DECREMENT       reduce using rule 30 (expr -> BOOL .)
    ID              reduce using rule 30 (expr -> BOOL .)
    PRINT           reduce using rule 30 (expr -> BOOL .)
    INT             reduce using rule 30 (expr -> BOOL .)
    FLOAT           reduce using rule 30 (expr -> BOOL .)
    STRING          reduce using rule 30 (expr -> BOOL .)
    CHAR            reduce using rule 30 (expr -> BOOL .)
    BOOL            reduce using rule 30 (expr -> BOOL .)
    LOOP            reduce using rule 30 (expr -> BOOL .)
    IF              reduce using rule 30 (expr -> BOOL .)
    $end            reduce using rule 30 (expr -> BOOL .)
    LCURLY          reduce using rule 30 (expr -> BOOL .)
    RCURLY          reduce using rule 30 (expr -> BOOL .)
    RPARENTHESIS    reduce using rule 30 (expr -> BOOL .)


state 14

    (35) expr -> LOOP . LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

    LPARENTHESIS    shift and go to state 36


state 15

    (33) ifstatement -> IF . expr LCURLY statement RCURLY
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

    ID              shift and go to state 38
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14

    expr                           shift and go to state 37

state 16

    (3) statements -> statements statement .

    ID              reduce using rule 3 (statements -> statements statement .)
    PRINT           reduce using rule 3 (statements -> statements statement .)
    INT             reduce using rule 3 (statements -> statements statement .)
    FLOAT           reduce using rule 3 (statements -> statements statement .)
    STRING          reduce using rule 3 (statements -> statements statement .)
    CHAR            reduce using rule 3 (statements -> statements statement .)
    BOOL            reduce using rule 3 (statements -> statements statement .)
    LOOP            reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    RCURLY          reduce using rule 3 (statements -> statements statement .)


state 17

    (6) statement -> ID EQUALS . expr
    (7) statement -> ID EQUALS . ID
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

    ID              shift and go to state 39
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14

    expr                           shift and go to state 40

state 18

    (10) expr -> expr DIVIDE . expr
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

    ID              shift and go to state 38
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14

    expr                           shift and go to state 41

state 19

    (11) expr -> expr MULTIPLY . expr
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

    ID              shift and go to state 38
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14

    expr                           shift and go to state 42

state 20

    (12) expr -> expr ADD . expr
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

    ID              shift and go to state 38
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14

    expr                           shift and go to state 43

state 21

    (13) expr -> expr SUBTRACT . expr
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

    ID              shift and go to state 38
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14

    expr                           shift and go to state 44

state 22

    (14) expr -> expr MODULUS . expr
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

    ID              shift and go to state 38
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14

    expr                           shift and go to state 45

state 23

    (15) expr -> expr EEQUALS . expr
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

    ID              shift and go to state 38
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14

    expr                           shift and go to state 46

state 24

    (16) expr -> expr GREATER . expr
    (10) expr -> . expr DIVIDE expr
    (11) expr -> . expr MULTIPLY expr
    (12) expr -> . expr ADD expr
    (13) expr -> . expr SUBTRACT expr
    (14) expr -> . expr MODULUS expr
    (15) expr -> . expr EEQUALS expr
    (16) expr -> . expr GREATER expr
    (17) expr -> . expr SMALLER expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr OR expr
    (20) expr -> . expr NOTEQUALS expr
    (21) expr -> . expr GEQUAL expr
    (22) expr -> . expr SEQUAL expr
    (23) expr -> . expr INCREMENT
    (24) expr -> . expr DECREMENT
    (25) expr -> . ID
    (26) expr -> . INT
    (27) expr -> . FLOAT
    (28) expr -> . STRING
    (29) expr -> . CHAR
    (30) expr -> . BOOL
    (35) expr -> . LOOP LPARENTHESIS expr RPARENTHESIS LCURLY statements RCURLY

    ID              shift and go to state 38
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    LOOP            shift and go to state 14

    expr                           shift and go to state 47

state 25
